Added 2 columns to Space
space_type and description
