# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2019_09_11_010636) do
+ActiveRecord::Schema.define(version: 2019_09_21_134748) do
 
   create_table "booking_processes", options: "ENGINE=InnoDB DEFAULT CHARSET=utf8", force: :cascade do |t|
     t.bigint "lessee_id"
@@ -131,6 +131,8 @@ ActiveRecord::Schema.define(version: 2019_09_11_010636) do
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
     t.decimal "rent_price", precision: 10
+    t.integer "space_type"
+    t.text "description"
     t.index ["lessor_id"], name: "index_spaces_on_lessor_id"
   end
 
