# swagger/v1/swagger.json
@@ -125,6 +125,12 @@
                       "type": "number",
                       "format": "double"
                     },
+                    "space_type": {
+                      "type": "integer"
+                    },
+                    "description": {
+                      "type": "string"
+                    },
                     "lessor": {
                       "id": {
                         "type": "integer"
@@ -368,6 +374,12 @@
                       "type": "number",
                       "format": "double"
                     },
+                    "space_type": {
+                      "type": "integer"
+                    },
+                    "description": {
+                      "type": "string"
+                    },
                     "lessor": {
                       "id": {
                         "type": "integer"
@@ -585,6 +597,12 @@
                     "rent_price": {
                       "type": "number",
                       "format": "double"
+                    },
+                    "space_type": {
+                      "type": "integer"
+                    },
+                    "description": {
+                      "type": "string"
                     },
                     "lessor": {
                       "id": {
@@ -2095,6 +2113,12 @@
                     "rent_price": {
                       "type": "number"
                     },
+                    "space_type": {
+                      "type": "integer"
+                    },
+                    "description": {
+                      "type": "string"
+                    },
                     "lessor": {
                       "type": "object",
                       "properties": {
@@ -2254,6 +2278,12 @@
                     "rent_price": {
                       "type": "number"
                     },
+                    "space_type": {
+                      "type": "integer"
+                    },
+                    "description": {
+                      "type": "string"
+                    },
                     "lessor": {
                       "type": "object",
                       "properties": {
@@ -2387,6 +2417,12 @@
                     },
                     "rent_price": {
                       "type": "number"
+                    },
+                    "space_type": {
+                      "type": "integer"
+                    },
+                    "description": {
+                      "type": "string"
                     },
                     "lessor": {
                       "type": "object",
@@ -2562,6 +2598,12 @@
                     "rent_price": {
                       "type": "number"
                     },
+                    "space_type": {
+                      "type": "integer"
+                    },
+                    "description": {
+                      "type": "string"
+                    },
                     "lessor": {
                       "type": "object",
                       "properties": {
@@ -2719,6 +2761,12 @@
                     "rent_price": {
                       "type": "number"
                     },
+                    "space_type": {
+                      "type": "integer"
+                    },
+                    "description": {
+                      "type": "string"
+                    },
                     "lessor": {
                       "type": "object",
                       "properties": {
@@ -2850,6 +2898,12 @@
                     },
                     "rent_price": {
                       "type": "number"
+                    },
+                    "space_type": {
+                      "type": "integer"
+                    },
+                    "description": {
+                      "type": "string"
                     },
                     "lessor": {
                       "type": "object",
@@ -3283,6 +3337,12 @@
                     "updated_at": {
                       "type": "string"
                     },
+                    "space_type": {
+                      "type": "integer"
+                    },
+                    "description": {
+                      "type": "string"
+                    },
                     "lessor": {
                       "type": "object",
                       "properties": {
@@ -3473,6 +3533,12 @@
                     "updated_at": {
                       "type": "string"
                     },
+                    "space_type": {
+                      "type": "integer"
+                    },
+                    "description": {
+                      "type": "string"
+                    },
                     "lessor": {
                       "type": "object",
                       "properties": {
@@ -3636,6 +3702,12 @@
                       "type": "string"
                     },
                     "updated_at": {
+                      "type": "string"
+                    },
+                    "space_type": {
+                      "type": "integer"
+                    },
+                    "description": {
                       "type": "string"
                     },
                     "lessor": {
@@ -3805,6 +3877,12 @@
                 "rent_price": {
                   "type": "number"
                 },
+                "space_type": {
+                  "type": "integer"
+                },
+                "description": {
+                  "type": "string"
+                },
                 "lessor": {
                   "type": "object",
                   "properties": {
@@ -3948,6 +4026,12 @@
                 },
                 "rent_price": {
                   "type": "number"
+                },
+                "space_type": {
+                  "type": "integer"
+                },
+                "description": {
+                  "type": "string"
                 },
                 "lessor": {
                   "type": "object",
@@ -4104,6 +4188,12 @@
                 },
                 "rent_price": {
                   "type": "number"
+                },
+                "space_type": {
+                  "type": "integer"
+                },
+                "description": {
+                  "type": "string"
                 }
               },
               "required": [
@@ -4112,7 +4202,8 @@
                 "width",
                 "height",
                 "area",
-                "rent_price"
+                "rent_price",
+                "space_type"
               ]
             }
           },
